syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tacheshun/golang-rest-api;gen";

package SALES;

message Product {
  uint32 productId = 1;
  string name = 2;
  float price = 3;
  google.protobuf.Timestamp created = 4;
}

message Sale {
  uint32 saleId = 1;
  uint32 productId = 2;
  uint32 quantity = 3;
  google.protobuf.Timestamp created = 4;
}

message ProductWithSales {
  uint32 product = 1;
  uint32 sale = 2;
}

message ProductIdRequest {
  uint32 productId = 1;
}

message ProductReply {
  repeated Product product = 1;
}

service Sales {
  rpc GetProductWithHighestSales(ProductIdRequest) returns (ProductWithSales) {}
}